Dark mode improvements

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <!-- ABOUT -->
-        <div id="about" class="section">
+        <div id="about" class="section plain_section">
             <div class="section_content narrow_content">
                 <h1>About</h1>
                 <p>The Imperial College Dramatic Society is one of two major theatrical arts societies at Imperial College London, with the other being the <a href="https://mtsoc.co.uk" target="_blank"  rel="noopener">Musical Theatre Society</a>. Founded in 1907, around the time of the founding of the College, we have existed for over a hundred years and even predate Imperial College Union itself!</p>
@@ -105,7 +105,7 @@
         </div>
 
         <!-- SHOWS -->
-        <div id="shows" class="section">
+        <div id="shows" class="section plain_section">
             <div class="section_content">
                 <h1>Past Shows</h1>
                 <div id="past_shows">
@@ -180,7 +180,7 @@
         </div>
 
         <!-- TECHNICAL SERVICES -->
-        <div id="tech_services" class="section">
+        <div id="tech_services" class="section plain_section">
             <div class="section_content narrow_content">
                 <h1>Technical Services</h1>
                 <p>DramSoc provides a wide range of technical services; from plays to musicals, talent shows to outdoor music festival stages, variety shows to the annual Summer Ball, we do it all. We have a large and dedicated crew, and hire out professional lighting and sound equipment, props and set from our extensive stores. In addition, we offer comprehensive production management, consultancy and design services.</p>
@@ -206,7 +206,7 @@
         </div>
 
         <!-- COMMITTEE -->
-        <div id="committee" class="section">
+        <div id="committee" class="section plain_section">
             <div class="section_content regular_content">
                 <h1>Committee</h1>
                 <div class="content_grid">
@@ -215,7 +215,7 @@
                         <div>
                             <h2>Jonah McLeod</h2>
                             <p class="committee_role">President</p>
-                            <a class="committee_email" href="mailto:president@dramsoc.org">president@dramsoc.org</a>
+                            <a href="mailto:president@dramsoc.org">president@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -223,7 +223,7 @@
                         <div>
                             <h2>Ben Meacher</h2>
                             <p class="committee_role">Vice President</p>
-                            <a class="committee_email" href="mailto:vice@dramsoc.org">vice@dramsoc.org</a>
+                            <a href="mailto:vice@dramsoc.org">vice@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -231,7 +231,7 @@
                         <div>
                             <h2>Jack Beaumont</h2>
                             <p class="committee_role">Technical Director</p>
-                            <a class="committee_email" href="mailto:techdir@dramsoc.org">techdir@dramsoc.org</a>
+                            <a href="mailto:techdir@dramsoc.org">techdir@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -239,7 +239,7 @@
                         <div>
                             <h2>Oliver Gale</h2>
                             <p class="committee_role">Treasurer</p>
-                            <a class="committee_email" href="mailto:treasurer@dramsoc.org">treasurer@dramsoc.org</a>
+                            <a href="mailto:treasurer@dramsoc.org">treasurer@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -247,7 +247,7 @@
                         <div>
                             <h2>Jarek Ciba</h2>
                             <p class="committee_role">Lighting Director</p>
-                            <a class="committee_email" href="mailto:lighting@dramsoc.org">lighting@dramsoc.org</a>
+                            <a href="mailto:lighting@dramsoc.org">lighting@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -255,7 +255,7 @@
                         <div>
                             <h2>Josh Henry</h2>
                             <p class="committee_role">Sound Director</p>
-                            <a class="committee_email" href="mailto:sound@dramsoc.org">sound@dramsoc.org</a>
+                            <a href="mailto:sound@dramsoc.org">sound@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -263,7 +263,7 @@
                         <div>
                             <h2>Liberty Wright</h2>
                             <p class="committee_role">Sets, Props & Costumes<br>Director</p>
-                            <a class="committee_email" href="mailto:spc@dramsoc.org">spc@dramsoc.org</a>
+                            <a href="mailto:spc@dramsoc.org">spc@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -271,7 +271,7 @@
                         <div>
                             <h2>Dan Cornell</h2>
                             <p class="committee_role">Acting Director</p>
-                            <a class="committee_email" href="mailto:acting@dramsoc.org">acting@dramsoc.org</a>
+                            <a href="mailto:acting@dramsoc.org">acting@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -279,7 +279,7 @@
                         <div>
                             <h2>Sophie Reck Pointon</h2>
                             <p class="committee_role">Honorary Secretary<br>& Social Secretary</p>
-                            <a class="committee_email" href="mailto:honsec@dramsoc.org">honsec@dramsoc.org</a>
+                            <a href="mailto:honsec@dramsoc.org">honsec@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -287,7 +287,7 @@
                         <div>
                             <h2>Jack Finnis</h2>
                             <p class="committee_role">Systems Administrator</p>
-                            <a class="committee_email" href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
+                            <a href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -295,7 +295,7 @@
                         <div>
                             <h2>Pip Moss</h2>
                             <p class="committee_role">Systems Administrator</p>
-                            <a class="committee_email" href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
+                            <a href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -303,7 +303,7 @@
                         <div>
                             <h2>Valerie Locher</h2>
                             <p class="committee_role">Publicity Officer</p>
-                            <a class="committee_email" href="mailto:publicity@dramsoc.org">publicity@dramsoc.org</a>
+                            <a href="mailto:publicity@dramsoc.org">publicity@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -311,7 +311,7 @@
                         <div>
                             <h2>Anoushka Nairac</h2>
                             <p class="committee_role">Social Secretary</p>
-                            <a class="committee_email" href="mailto:social@dramsoc.org">social@dramsoc.org</a>
+                            <a href="mailto:social@dramsoc.org">social@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -319,7 +319,7 @@
                         <div>
                             <h2>Elana Todd-Miller</h2>
                             <p class="committee_role">Ordinary Committee Member</p>
-                            <a class="committee_email" href="mailto:ocm@dramsoc.org">ocm@dramsoc.org</a>
+                            <a href="mailto:ocm@dramsoc.org">ocm@dramsoc.org</a>
                         </div>
                     </div>
                 </div>
@@ -361,7 +361,7 @@
         </div>
 
         <!-- CONTACT -->
-        <div id="contact" class="section">
+        <div id="contact" class="section plain_section">
             <div class="section_content">
                 <h1>Contact Us</h1>
                 <div class="content_column">
