Small improvements for mobile

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div id="acting" class="section background_section">
             <div class="section_content narrow_content">
                 <h1>Acting</h1>
-                <p>DramSoc puts on at least one full-length play in our theatre, the Union Concert Hall, per term, as well as a number of other plays in different venues around the College and further afield. Usually our main shows have casts of between 15 and 20 people and we welcome auditions from anyone with any amount of experience, so if you’re thinking of getting involved, keep an eye out for audition posters and notices on our website, social media, and our mailing lists at the start and end of every term.</p>
+                <p>DramSoc puts on at least one full-length play in our theatre, the <button type="button" onclick="scroll_to('uch')">Union Concert Hall</button> per term, as well as a number of other plays in different venues around the College and further afield. Usually our main shows have casts of between 15 and 20 people and we welcome auditions from anyone with any amount of experience, so if you’re thinking of getting involved, keep an eye out for audition posters and notices on our website, social media, and our mailing lists at the start and end of every term.</p>
                 <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
                     <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                     Join Our Mailing List
@@ -370,7 +370,7 @@
                             <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                             President
                         </a>
-                        <p>General queries.</p>
+                        <p>General queries and complaints.</p>
                     </div>
                     <div class="content_row">
                         <a href="mailto:treasurer@dramsoc.org" class="large_button">
@@ -441,8 +441,8 @@
                         </a>
                     </div>
                 </div>
-                <p>
-                    DramSoc is a part of Imperial College Union, which is a UK Registered Charity, Number 1151241<br>
+                <p id="copyright">
+                    DramSoc is part of Imperial College Union which is a <a href="https://register-of-charities.charitycommission.gov.uk/charity-search/-/charity-details/5033166">UK Registered Charity, Number 1151241</a><br>
                     Copyright © 2024 Imperial College Dramatic Society
                 </p>
             </div>
