Updated tab icon and og:image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
         <meta charset="utf-8">
         <title>DramSoc | Imperial College Dramatic Society</title>
         
-		<link rel="icon" href="images/logos/dramsoc.jpeg">
-		<link rel="apple-touch-icon" href="images/logos/dramsoc.jpeg">
+		<link rel="icon" href="images/logos/dramsoc.jpg">
+		<link rel="apple-touch-icon" href="images/logos/dramsoc.jpg">
         <meta name="viewport" content="width=device-width, viewport-fit=cover">
-        <meta property="og:image" content="images/banners/get_in.jpeg">
+        <meta property="og:image" content="images/general/summer_ball1.jpg">
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
         <link rel="stylesheet" href="style.css">
