Contact links improvement

--- a/index.html
+++ b/index.html
@@ -365,35 +365,35 @@
             <div class="section_content">
                 <h1>Contact Us</h1>
                 <div class="content_column">
-                    <div class="content_row">
+                    <div class="content_row contact_option">
                         <a href="mailto:president@dramsoc.org" class="large_button">
                             <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                             President
                         </a>
                         <p>General queries and complaints.</p>
                     </div>
-                    <div class="content_row">
+                    <div class="content_row contact_option">
                         <a href="mailto:treasurer@dramsoc.org" class="large_button">
                             <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                             Treasurer
                         </a>
                         <p>Financial and invoicing queries. For quotes contact the Technical Director.</p>
                     </div>
-                    <div class="content_row">
+                    <div class="content_row contact_option">
                         <a href="mailto:techdir@dramsoc.org" class="large_button">
                             <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                             Technical Director
                         </a>
                         <p>Queries related to technical services and hire.</p>
                     </div>
-                    <div class="content_row">
+                    <div class="content_row contact_option">
                         <a href="mailto:acting@dramsoc.org" class="large_button">
                             <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                             Acting Director
                         </a>
                         <p>Queries related to plays, play proposals, auditions and acting workshops.</p>
                     </div>
-                    <div class="content_row">
+                    <div class="content_row contact_option">
                         <a href="mailto:sysadmin@dramsoc.org" class="large_button">
                             <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                             System Administrator
