--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
                 <h1>Past Shows</h1>
                 <div id="past_shows">
                     <div class="show">
+                        <img aria-hidden="true" class="show_img" src="images/shows/romeo_and_juliet.png">
+                        <h4 class="show_title">Romeo + Juliet - Spring Main 2024</h4>
+                    </div>
+                    <div class="show">
                         <img aria-hidden="true" class="show_img" src="images/shows/bald_prima_donna.jpg">
                         <h4 class="show_title">The Bald Prima Donna - October Show 2023</h4>
                     </div>
@@ -118,7 +122,7 @@
                         <h4 class="show_title">Earthquakes In London - Spring Main 2023</h4>
                     </div>
                     <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/an_angel_in_islington.jpg">
+                        <img aria-hidden="true" class="show_img" src="images/shows/an_angel_in_islington.jpeg">
                         <h4 class="show_title">An Angel In Islington - October Show 2021</h4>
                     </div>
                     <div class="show">
@@ -126,7 +130,7 @@
                         <h4 class="show_title">All In Good Time - Spring Main 2019</h4>
                     </div>
                     <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/confusions.jpg">
+                        <img aria-hidden="true" class="show_img" src="images/shows/confusions.jpeg">
                         <h4 class="show_title">Confusions - Autumn Studio 2018</h4>
                     </div>
                     <div class="show">
@@ -134,16 +138,12 @@
                         <h4 class="show_title">And Then There Were None - Autumn Main 2018</h4>
                     </div>
                     <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/no_exit.jpg">
+                        <img aria-hidden="true" class="show_img" src="images/shows/no_exit.jpeg">
                         <h4 class="show_title">No Exit - Autumn Studio 2017</h4>
                     </div>
                     <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/maskerade.jpg">
+                        <img aria-hidden="true" class="show_img" src="images/shows/maskerade.jpeg">
                         <h4 class="show_title">Maskerade - Autumn Main 2017</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/beowulf.jpg">
-                        <h4 class="show_title">Beowulf - Autumn Main 2016</h4>
                     </div>
                 </div>
                 <div class="section_content narrow_content">
@@ -408,9 +408,22 @@
         <div id="footer" class="section">
             <div class="section_content">
                 <div class="content_grid" id="footer_grid">
-                    <button aria-hidden="true" type="button" onclick="scroll_to('intro')">
-                        <img class="invert small_logo" aria-hidden="true" src="images/logos/dramsoc.png">
-                    </button>
+                    <div class="content_column">
+                        <button aria-hidden="true" type="button" onclick="scroll_to('intro')">
+                            <img class="invert small_logo" aria-hidden="true" src="images/logos/dramsoc.png">
+                        </button>
+                        <div class="content_row">
+                            <a title="Instagram" href="https://www.instagram.com/ic_dramsoc/" target="_blank" rel="noopener">
+                                <img aria-hidden="true" class="icon" src="images/symbols/instagram.png">
+                            </a>
+                            <a title="Facebook" href="https://www.facebook.com/dramsoc" target="_blank" rel="noopener">
+                                <img aria-hidden="true" class="icon" src="images/symbols/facebook.png">
+                            </a>
+                            <a title="TikTok" href="https://www.tiktok.com/@ic_dramsoc" target="_blank" rel="noopener">
+                                <img aria-hidden="true" class="icon" src="images/symbols/tiktok.png">
+                            </a>
+                        </div>
+                    </div>
                     <a href="https://maps.app.goo.gl/wFEc4Y3T66jhwqZj7" target="_blank" rel="noopener">
                         <p id="address">
                             Imperial College Dramatic Society<br>
