Updated about section welcome text

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
             <div class="section_content narrow_content">
-                <h1>About</h1>
-                <p>The Imperial College Dramatic Society is one of two major theatrical arts societies at Imperial College London, with the other being the <a href="https://mtsoc.co.uk" target="_blank"  rel="noopener">Musical Theatre Society</a>. Founded in 1907, around the time of the founding of the College, we have existed for over a hundred years and even predate Imperial College Union itself!</p>
-                <p>Each year we aim to put on two major plays, as well as several smaller fringe productions, acting and technical workshops. We also provide technical services to other Clubs and Societies, multiple Union events and external clients.</p>
-                <p>Unusually amongst University drama societies, we maintain a full complement of theatrical equipment, technicians, designers, carpenters, riggers, and stage and production managers, in addition to hosting a large community of actors. This gives us a unique advantage to our productions: from the initial planning stages, to the design and get in, all the way through to the show run, everyone is working alongside each other and interacting closely to produce truly remarkable results.</p>
+                <h1>Welcome to DramSoc, Imperial's Dramatic Society!</h1>
+                <p>We do everything related to theatre: acting, set, costume, lighting, sound, writing, stage management, directing, production, and more. There's plenty to get involved in!</p>
+                <p>DramSoc own and operate the full range of state-of-the-art entertainment equipment, and our technical team run events across college, from <a href="https://mtsoc.co.uk" target="_blank" rel="noopener">MTSoc</a> shows to Summer Ball. We take pride in training our members as theatre technicians, actors and directors. We run weekly workshops, including backstage tours, improvisation, set-building, lighting design, and much more, and many of our alumni graduate to become theatre professionals.</p>
+                <p>We stage 2 plays per term, with recent productions including Mike Bartlett's 'Earthquakes in London', and 'Compost', a 5-star piece of original theatre produced at Edinburgh Fringe. We produce a range of work written by students, and established playwrights. This really is the place to be if you love theatre!</p>
                 <div class="content_row">
                     <a class="large_button" href="https://www.instagram.com/ic_dramsoc/" target="_blank" rel="noopener">
                         <img aria-hidden="true" class="icon" src="images/symbols/instagram.png">
@@ -87,6 +87,10 @@
                     <a class="large_button" href="https://www.tiktok.com/@ic_dramsoc" target="_blank" rel="noopener">
                         <img aria-hidden="true" class="icon" src="images/symbols/tiktok.png">
                         TikTok
+                    </a>
+                    <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
+                        <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
+                        Join Our Mailing List
                     </a>
                 </div>
             </div>
@@ -370,7 +374,7 @@
                             <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                             President
                         </a>
-                        <p>General queries and complaints.</p>
+                        <p>General queries.</p>
                     </div>
                     <div class="content_row contact_option">
                         <a href="mailto:treasurer@dramsoc.org" class="large_button">
@@ -399,6 +403,13 @@
                             System Administrator
                         </a>
                         <p>Queries related to this website.</p>
+                    </div>
+                    <div class="content_row contact_option">
+                        <a href="mailto:complaints@dramsoc.org" class="large_button">
+                            <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
+                            Complaints
+                        </a>
+                        <p>Concerns and complaints.</p>
                     </div>
                 </div>
             </div>
