Fixed social footer buttons dark mode and added more recent shows

--- a/index.html
+++ b/index.html
@@ -111,43 +111,43 @@
         <!-- SHOWS -->
         <div id="shows" class="section plain_section">
             <div class="section_content">
-                <h1>Past Shows</h1>
+                <h1>Recent Shows</h1>
                 <div id="past_shows">
                     <div class="show">
                         <img aria-hidden="true" class="show_img" src="images/shows/romeo_and_juliet.png">
                         <h4 class="show_title">Romeo + Juliet - Spring Main 2024</h4>
                     </div>
                     <div class="show">
+                        <img aria-hidden="true" class="show_img" src="images/shows/waiting_for_godot.jpeg">
+                        <h4 class="show_title">Waiting For Godot - Autumn Studio 2023</h4>
+                    </div>
+                    <div class="show">
                         <img aria-hidden="true" class="show_img" src="images/shows/bald_prima_donna.jpg">
                         <h4 class="show_title">The Bald Prima Donna - October Show 2023</h4>
+                    </div>
+                    <div class="show">
+                        <img aria-hidden="true" class="show_img" src="images/shows/the_pillowman.jpeg">
+                        <h4 class="show_title">The Pillowman - Spring Studio 2023</h4>
                     </div>
                     <div class="show">
                         <img aria-hidden="true" class="show_img" src="images/shows/earthquakes_in_london.jpg">
                         <h4 class="show_title">Earthquakes In London - Spring Main 2023</h4>
                     </div>
                     <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/an_angel_in_islington.jpeg">
+                        <img aria-hidden="true" class="show_img" src="images/shows/the_hothouse.jpeg">
+                        <h4 class="show_title">The Hothouse - Spring Main 2022</h4>
+                    </div>
+                    <div class="show">
+                        <img aria-hidden="true" class="show_img" src="images/shows/family_room.jpeg">
+                        <h4 class="show_title">Family Room - Autumn Main 2021</h4>
+                    </div>
+                    <div class="show">
+                        <img aria-hidden="true" class="show_img" src="images/shows/an_angel_in_islington.jpg">
                         <h4 class="show_title">An Angel In Islington - October Show 2021</h4>
                     </div>
                     <div class="show">
                         <img aria-hidden="true" class="show_img" src="images/shows/all_in_good_time.jpeg">
                         <h4 class="show_title">All In Good Time - Spring Main 2019</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/confusions.jpeg">
-                        <h4 class="show_title">Confusions - Autumn Studio 2018</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/and_then_there_were_none.jpg">
-                        <h4 class="show_title">And Then There Were None - Autumn Main 2018</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/no_exit.jpeg">
-                        <h4 class="show_title">No Exit - Autumn Studio 2017</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/maskerade.jpeg">
-                        <h4 class="show_title">Maskerade - Autumn Main 2017</h4>
                     </div>
                 </div>
                 <div class="section_content narrow_content">
