Added link to events calendar

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                         <img aria-hidden="true" class="icon" src="images/symbols/tiktok.png">
                         TikTok
                     </a>
+                    <div class="break"></div>
+                    <a class="large_button" href="https://outlook.office365.com/calendar/published/67f72540d8e24159bd72cf807716dc86@imperial.ac.uk/82262ebe17ff4419a97649dd90fd85ed6387450589728315788/calendar.html" target="_blank" rel="noopener">
+                        <img aria-hidden="true" class="icon" src="images/symbols/calendar.png">
+                        Upcoming Events
+                    </a>
                     <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
                         <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
                         Join Our Mailing List
@@ -155,11 +160,11 @@
                     <p>DramSoc decides on each term's shows at a Play Proposals meeting (announced on the DramSoc mailing list) held near to the end of the previous term. A full play proposal includes:</p>
                     <ul>
                         <li>Representative excerpts from the script</li>
-                        <li>A brief synopsis of the play, to include genre and style</li>
-                        <li>A cast breakdown: M/F, large/medium/small parts</li>
-                        <li>A creative vision & an idea of technical requirements</li>
-                        <li>C production team, to include at least a director and a producer</li>
-                        <li>Knowledge of whether performance rights are available</li>
+                        <li>Brief synopsis of the play, its genre and style</li>
+                        <li>Cast breakdown including M/F & large/medium/small parts</li>
+                        <li>Creative vision and possible technical requirements</li>
+                        <li>Production team including a director or producer</li>
+                        <li>Whether performance rights are available</li>
                     </ul>
                     <p>A play proposal with all of these things considered is much stronger than one without, but none of these things are mandatory for a proposal. If you have an idea for a proposal, but are unsure about any aspect of the proposal or proposals process, please email the DramSoc President or Acting Director. Additionally, anyone may come to the meeting to observe the process.</p>
                     <a href="mailto:acting@dramsoc.org" class="large_button">
@@ -174,7 +179,7 @@
         <div id="tech" class="section background_section">
             <div class="section_content narrow_content">
                 <h1>Tech</h1>
-                <p>There are plenty of roles within DramSoc even for those who prefer to stay off the stage! All technical aspects of our shows, and of shows staged by the Musical Theatre Society, are provided by DramSoc Crew. We design and build the set, then dress it and light it. We design sound effects and rig sound equipment. And we make sure the cast look their best with the right costumes, props and make-up.</p>
+                <p>There are plenty of roles within DramSoc even for those who prefer to stay off the stage! All technical aspects of our shows, and of shows staged by the <a href="https://mtsoc.co.uk" target="_blank" rel="noopener">Musical Theatre Society</a>, are provided by DramSoc Crew. We design and build the set, then dress it and light it. We design sound effects and rig sound equipment. And we make sure the cast look their best with the right costumes, props and make-up.</p>
                 <p>On top of this, we provide sound, lighting and rigging for live events hosted by the Union and other Clubs & Societies, such as the annual Summer Ball, talent shows, live music events and club nights. We would love you to be around to help out! For more information or to get involved, email our Technical Director, and join the Crew Talk mailing list.</p>
                 <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
                     <img aria-hidden="true" class="icon" src="images/symbols/envelope.png">
