Added redirects and policies

--- a/index.html
+++ b/index.html
@@ -236,6 +236,22 @@
                         </div>
                     </div>
                     <div class="content_item">
+                        <img aria-hidden="true" class="headshot" src="images/committee/oliver.jpg">
+                        <div>
+                            <h2>Oliver Gale</h2>
+                            <p class="committee_role">Treasurer</p>
+                            <a href="mailto:treasurer@dramsoc.org">treasurer@dramsoc.org</a>
+                        </div>
+                    </div>
+                    <div class="content_item">
+                        <img aria-hidden="true" class="headshot" src="images/committee/sophie.jpg">
+                        <div>
+                            <h2>Sophie Reck Pointon</h2>
+                            <p class="committee_role">Honorary Secretary<br>& Social Secretary</p>
+                            <a href="mailto:honsec@dramsoc.org">honsec@dramsoc.org</a>
+                        </div>
+                    </div>
+                    <div class="content_item">
                         <img aria-hidden="true" class="headshot" src="images/committee/jack_beaumont.jpg">
                         <div>
                             <h2>Jack Beaumont</h2>
@@ -244,11 +260,11 @@
                         </div>
                     </div>
                     <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/oliver.jpg">
+                        <img aria-hidden="true" class="headshot" src="images/committee/dan.jpg">
                         <div>
-                            <h2>Oliver Gale</h2>
-                            <p class="committee_role">Treasurer</p>
-                            <a href="mailto:treasurer@dramsoc.org">treasurer@dramsoc.org</a>
+                            <h2>Dan Cornell</h2>
+                            <p class="committee_role">Acting Director</p>
+                            <a href="mailto:acting@dramsoc.org">acting@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
@@ -276,33 +292,17 @@
                         </div>
                     </div>
                     <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/dan.jpg">
+                        <img aria-hidden="true" class="headshot" src="images/committee/pip.jpg">
                         <div>
-                            <h2>Dan Cornell</h2>
-                            <p class="committee_role">Acting Director</p>
-                            <a href="mailto:acting@dramsoc.org">acting@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/sophie.jpg">
-                        <div>
-                            <h2>Sophie Reck Pointon</h2>
-                            <p class="committee_role">Honorary Secretary<br>& Social Secretary</p>
-                            <a href="mailto:honsec@dramsoc.org">honsec@dramsoc.org</a>
+                            <h2>Pip Moss</h2>
+                            <p class="committee_role">Systems Administrator</p>
+                            <a href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
                         </div>
                     </div>
                     <div class="content_item">
                         <img aria-hidden="true" class="headshot" src="images/committee/jack_finnis.jpg">
                         <div>
                             <h2>Jack Finnis</h2>
-                            <p class="committee_role">Systems Administrator</p>
-                            <a href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/pip.jpg">
-                        <div>
-                            <h2>Pip Moss</h2>
                             <p class="committee_role">Systems Administrator</p>
                             <a href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
                         </div>
@@ -329,6 +329,14 @@
                             <h2>Elana Todd-Miller</h2>
                             <p class="committee_role">Ordinary Committee Member</p>
                             <a href="mailto:ocm@dramsoc.org">ocm@dramsoc.org</a>
+                        </div>
+                    </div>
+                    <div class="content_item">
+                        <img aria-hidden="true" class="headshot" src="images/committee/mystifer_cat.jpg">
+                        <div>
+                            <h2>Mystifer Cat</h2>
+                            <p class="committee_role">Official Mascot</p>
+                            <a href="mailto:mystifercat@dramsoc.org">mystifercat@dramsoc.org</a>
                         </div>
                     </div>
                 </div>
@@ -428,6 +436,7 @@
                         <button aria-hidden="true" type="button" onclick="scroll_to('intro')">
                             <img class="invert small_logo" aria-hidden="true" src="images/logos/dramsoc.png">
                         </button>
+                        <p>Est. 1907</p>
                         <div class="content_row">
                             <a title="Instagram" href="https://www.instagram.com/ic_dramsoc/" target="_blank" rel="noopener">
                                 <img aria-hidden="true" class="icon" src="images/symbols/instagram.png">
@@ -440,8 +449,9 @@
                             </a>
                         </div>
                     </div>
-                    <a href="https://maps.app.goo.gl/wFEc4Y3T66jhwqZj7" target="_blank" rel="noopener">
-                        <p id="address">
+                    <div class="content_column">
+                        <a href="tel:+442075948102">+44 (0) 20 759 48102</a>
+                        <a id="address" href="https://maps.app.goo.gl/wFEc4Y3T66jhwqZj7" target="_blank" rel="noopener">
                             Imperial College Dramatic Society<br>
                             Imperial College Union<br>
                             Beit Quadrangle<br>
@@ -449,12 +459,21 @@
                             South Kensington<br>
                             London<br>
                             SW7 2BB<br>
-                        </p>
-                    </a>
+                        </a>
+                    </div>
                     <div class="content_column">
-                        <a href="https://drive.google.com/drive/folders/1k5JOO6hJiYjPn8yoFymKMHEBGHtOoada" rel="noopener" target="_blank">Committee Meeting Minutes</a>
                         <a href="/files/hire_terms_and_conditions.pdf" target="_blank">Hire Terms and Conditions</a>
                         <a href="/files/constitution.pdf" target="_blank">Constitution</a>
+                        <a href="/files/officer_duties.pdf" target="_blank">Officer Duties</a>
+                        <a href="/files/data_protection_policy.pdf" target="_blank">Data Protection</a>
+                        <a href="/files/debtor_policy.pdf" target="_blank">Debtor Policy</a>
+                        <a href="/files/privacy_notice.pdf" target="_blank">Privacy Notice</a>
+                    </div>
+                    <div class="content_column">
+                        <a href="https://drive.google.com/drive/folders/1k5JOO6hJiYjPn8yoFymKMHEBGHtOoada" rel="noopener" target="_blank">Committee Meeting Minutes</a>
+                        <a href="https://wiki.dramsoc.org/Category:Committee" target="_blank" rel="noopener">Past Committees</a>
+                        <a href="https://wiki.dramsoc.org/Events" target="_blank" rel="noopener">Past Shows</a>
+                        <a href="https://wiki.dramsoc.org/Winters" target="_blank" rel="noopener">Winters</a>
                         <a href="https://horde.dramsoc.org" target="_blank" rel="noopener">Horde</a>
                         <a href="https://wiki.dramsoc.org" target="_blank" rel="noopener">Wiki</a>
                     </div>
