--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div id="shows" class="section plain_section">
             <div class="section_content">
                 <h1>Recent Shows</h1>
-                <div id="past_shows">
+                <div id="shows_grid">
                     <div class="show">
                         <img aria-hidden="true" class="show_img" src="images/shows/romeo_and_juliet.png">
                         <h4 class="show_title">Romeo + Juliet - Spring Main 2024</h4>
@@ -218,7 +218,7 @@
         <div id="committee" class="section plain_section">
             <div class="section_content regular_content">
                 <h1>Committee</h1>
-                <div class="content_grid">
+                <div id="committee_grid" class="content_grid">
                     <div class="content_item">
                         <img aria-hidden="true" class="headshot" src="images/committee/jonah.jpg">
                         <div>
